--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -235,6 +235,31 @@ a{
 
 
 
+.front-logo{
+  animation-name: front-logo;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+@keyframes front-logo{
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+}
 
+.front-logo path {
+  fill: #fff;
+  animation: fill-color 2s infinite ease-in-out;
+}
 
-
+@keyframes fill-color {
+  0%, 100% {
+    fill: #fff;
+  }
+  50% {
+    fill: #00B3FF;
+  }
+}
